Fix overflow on subject container

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -104,6 +104,7 @@ activity = blue
   min-height: 360px
   max-height: 550px
   background: #666
+  overflow: hidden
   
   img
     max-width: 100%
